--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "src/index.ts",
   "scripts": {
+    "pretest": "tsc",
     "test": "mocha"
   },
   "repository": {
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "dotry": "^1.0.3",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "typescript": "^3.8.3"
   }
 }
