implement optional-field support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "noImplicitThis": true,
         "importHelpers": true
     },
-    "files": [
-        "src/index.ts"
+    "include": [
+        "src/*.ts"
     ]
 }
