--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hyurl/schemaly",
   "version": "1.0.0",
-  "description": "A tool to match and ensure structures of objects.",
+  "description": "Utilities to ensure object structures and perform pattern matching.",
   "main": "dist/index.js",
   "types": "src/index.ts",
   "scripts": {
@@ -23,12 +23,11 @@
   },
   "homepage": "https://github.com/hyurl/schemaly#readme",
   "dependencies": {
-    "@hyurl/utils": "^0.1.32"
+    "@hyurl/utils": "^0.2.5"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
     "dotry": "^1.0.3",
-    "mocha": "^7.1.1",
-    "typescript": "^3.8.3"
+    "mocha": "^7.2.0"
   }
 }
