rename to schematize, fix tests

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hyurl/schemaly",
+  "name": "@hyurl/schematize",
   "version": "1.0.0",
   "description": "Utilities to ensure object structures and perform pattern matching.",
   "main": "dist/index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hyurl/schemaly.git"
+    "url": "git+https://github.com/hyurl/schematize.git"
   },
   "keywords": [
     "schema",
@@ -19,9 +19,9 @@
   "author": "Ayon Lee <i@hyurl.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hyurl/schemaly/issues"
+    "url": "https://github.com/hyurl/schematize/issues"
   },
-  "homepage": "https://github.com/hyurl/schemaly#readme",
+  "homepage": "https://github.com/hyurl/schematize#readme",
   "dependencies": {
     "@hyurl/utils": "^0.2.5"
   },
