--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "src/index.ts",
   "scripts": {
+    "prepublishOnly": "tsc",
     "pretest": "tsc",
     "test": "mocha"
   },
